--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
             <p class="section__text__p1">Hello! I'm</p>
             <h1 class="title">Palesa Mapeka</h1>
             <p class="section__text__p2">Junior Web Developer</p>
+            <p class="section__text__p3">Hi! I am Palesa (aka Barry), and I am an aspiring web developer. I'm currently a recruit at <a>Umuzi.org</a>, 
+              where I'm learning and honing my development skills. <br>My goal is to build better and more inclusive software.
+              I obtained my National Diploma in Software Development in 2021. <br>I majored in mobile application development, 
+              and I have decided to branch off and learn more technologies and programming techniques.</p>
+
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('assets/Learning Web Design _ A Beginner’s Guide to HTML, CSS, JavaScript, and Web Graphics ( PDFDrive )')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Me</button>
+                <button class="btn btn-color-1" onclick="window.open('assets/Learning Web Design _ A Beginner’s Guide to HTML, CSS, JavaScript, and Web Graphics ( PDFDrive )')">Download CV</button>
+                <button class="btn btn-color-2" onclick="location.href='./#contact'">Contact Me</button>
             </div>
             <div id="socials-container">
                 <img src="assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/palesa-mapeka/'">
