--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 I obtained my National Diploma in Software Development in 2021. <br>I majored in mobile application development, 
                 and I have decided to branch off and learn more technologies and programming techniques.</p>
   
-                <p class="section__text__p3">If I'm not writing code and scratching my head trying to fix a bug, <br>
-                  you can find me either watching "The Big Bang Theory" for the 60th time (probably), reading a book or listening 
+                <p class="section__text__p3">If I'm not writing code and scratching my head trying to fix a bug,
+                  you can find me either watching <br>"The Big Bang Theory" for the 60th time (probably), reading a book or listening 
                   to music. I would like to think that my music taste is elite. Don't believe me? &#128527; Here's one of my many playlists.
                 </p>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2eQU54GK7uXqWSSDasINWi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
