added an icon for the tab

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Palesa Mapeka</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="media_queries.css">
+    <link rel="icon" href="./assets/rainbow-svgrepo-com.svg" />
+
 </head>
 
 <body>
