--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
       </div>
       <img src="./assets/arrow.png" alt="arrow icon" class="icon" onclick="location.href='./#projects'">
     </section>
+
+    <div class="projects">
+      <p class="section__text__p1">Projects</p>
+      <h1 class="title"></h1>
+      <div class="project-details-container">
+        <div class="about-containers">
+          <div class="details-containers">
+            <h2 class="projects-sub-title">Web Development<h2>
+              <div class="article-container">
+                <article>
+                  <img src="./assets/checkmark.png" alt="check mark" class="icon">
+                </article>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
